spacing on about page and  design issue of blog page

--- a/Blogs.css
+++ b/Blogs.css
@@ -144,7 +144,7 @@ nav .fa{
 .blog{
     display: flex;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
     flex-direction: column;
     padding: 40px;
     border-bottom: 1px solid black;
@@ -169,17 +169,18 @@ nav .fa{
 }
 .blog-container{
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     margin: 20px 0px;
     flex-wrap: wrap;
 }
 .blog-box{
-    width: 236px;
+    width: 350px;
     background: white;
     border: 1px solid #ececee;
-    margin:20px;
-    border-radius: 20px;
+    margin:40px 10px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px 0px lightgrey;
 }
 .blog-img{
     width: 100%;
@@ -188,7 +189,7 @@ nav .fa{
 }
 .blog-img img{
     width:100%;
-    height: 100%;
+    height: 350px;
     object-fit: cover;
     object-position: center;
 }
@@ -203,10 +204,11 @@ nav .fa{
 }
 .blog-text .blog-tiitle{
     font-size: 1.1rem;
-    font-weight: 500;
+    font-weight: bold;
     color: #272727;
     text-decoration: none;
     font-family: arial;
+    margin: 15px 0px;
 }
 .blog-text .blog-tiitle:hover{
     color: #f33c3c;
@@ -220,7 +222,7 @@ nav .fa{
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
-    margin: 26px 6px;
+    /* margin: 26px 6px; */
 }
 .blog-text a{
     color: #0f0f0f;
@@ -228,6 +230,7 @@ nav .fa{
     font-size: 1rem;
     font-family: arial;
     font-weight: 400;
+    margin-top: 10px;
 }
 .blog-text a:hover{
     color: #f33c3c;
