--- a/about.css
+++ b/about.css
@@ -196,14 +196,15 @@ nav .fa{
     background-color: whitesmoke;
 }
 .details-1{
-    padding: 40px;
+    padding: 80px 0px;
     width: 80%;
     margin: auto;  
 }
 
 h3{
     margin-left: 17px;
-    font-size: 29px;
+    margin-bottom: 10px;
+    font-size: 35px;
     color: rgba(15, 14, 14, 0.96);
     font-weight: 300;
 }   
@@ -214,7 +215,7 @@ h3{
 } 
 .paragraph-1{
     text-align: justify;    
-    font-size: 19px;
+    font-size: 16px;
     font-weight: lighter;
     font-family: sans-serif;
     margin-left: 20px;
